checkstyle and spotbugs on windows implementation